Fix font size of sort on Safari
#93

--- a/res/style.scss
+++ b/res/style.scss
@@ -164,6 +164,7 @@
 
         & .sort {
             -webkit-appearance: none;
+            font-size: 80%;
             color: gray;
             font-weight: bold;
             border: none !important;
